--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>kai was here.</title>
+</head>
+<body>
+    <h1>:P</h1>
+    <p>You have reached the website of KAI WALLIS.</p>
+    <p>Unfortunately, this website is not available right now. Please check back later or reach out to an admin.</p>
+</body>
+</html>
